--- a/src/Components/Feed/Feed.scss
+++ b/src/Components/Feed/Feed.scss
@@ -1,2 +1,33 @@
+@import "../../style/base/colors";
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.feed::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
 .feed {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+.feed {
+  flex: 0.4;
+  border-right: 1px solid $twitter-bgcolor;
+  // min-width: fit-content;
+  overflow-y: scroll;
+
+  &__header {
+    position: sticky;
+    top: 0;
+    background-color: $white;
+    z-index: 100;
+    border: 1px solid $twitter-bgcolor;
+    padding: 15px 20px;
+  }
+
+  & > h2 {
+    font-size: 20px;
+    font-weight: 700;
+  }
 }
