--- a/src/style/utilities/_mixins.scss
+++ b/src/style/utilities/_mixins.scss
@@ -6,6 +6,13 @@
   }
 }
 
+@mixin maxPageWidth {
+  max-width: 1300px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 0 10px;
+}
+
 @mixin calculateFluidFontSize($fontSize, $lineHeight, $screenLimit) {
   /* FONT SIZE */
 
