--- a/src/Components/Widgets/Widgets.scss
+++ b/src/Components/Widgets/Widgets.scss
@@ -1,3 +1,41 @@
+@import "../../style/base/colors";
+
 .widgets {
   flex: 0.3;
+
+  &__input {
+    display: flex;
+    align-items: center;
+    background-color: $twitter-bgcolor;
+    padding: 10px;
+    border-radius: 20px;
+    margin-top: 10px;
+    margin-left: 20px;
+
+    & > input {
+      background-color: $twitter-bgcolor;
+      border: none;
+      outline: none;
+    }
+  }
+
+  &__searchIcon {
+    color: $grey;
+  }
+
+  &__widgetContainer {
+    margin-top: 15px;
+    margin-left: 20px;
+    padding: 20px;
+    background-color: #f5f8fa;
+    border-radius: 20px;
+
+    & > h2 {
+      font-size: 18px;
+      font-weight: 700;
+      padding-bottom: 10px;
+      margin-bottom: 15px;
+      border-bottom: 1px solid $twitter-bgcolor;
+    }
+  }
 }
