--- a/src/Components/LoginScreen/LoginScreen.scss
+++ b/src/Components/LoginScreen/LoginScreen.scss
@@ -39,7 +39,7 @@
     width: auto;
     height: 150vh;
     object-fit: cover;
-    transform: translate(40%, -50%);
+    transform: translate(30%, -50%);
     z-index: 1;
   }
 
@@ -85,7 +85,7 @@
       font-weight: 800;
       text-transform: inherit;
       border-radius: 30px;
-      height: 50px;
+      height: 40px;
       margin-top: 20px;
 
       &:hover {
@@ -101,8 +101,8 @@
         color: $twitter-color;
 
         &:hover {
-          background-color: $twitter-color;
-          color: $white;
+          background-color: $twitter-bgcolor;
+          color: $twitter-color;
         }
       }
     }
