Sidebar: profile badge + popup with logout added

--- a/src/Components/SidebarProfile/SidebarProfile.scss
+++ b/src/Components/SidebarProfile/SidebarProfile.scss
@@ -7,6 +7,7 @@
   transition: all 0.1s ease-in-out;
   padding: 10px;
   margin-top: 20px;
+  position: relative;
 
   &:hover {
     background-color: #e8f5fe;
