--- a/src/Components/Sidebar/Sidebar.scss
+++ b/src/Components/Sidebar/Sidebar.scss
@@ -22,6 +22,10 @@
   overflow-y: auto;
 
   &__nav {
+    & > a {
+      text-decoration: none;
+      color: inherit;
+    }
   }
 
   &__twitterIcon {
