--- a/src/Components/TweetBox/TweetBox.scss
+++ b/src/Components/TweetBox/TweetBox.scss
@@ -36,6 +36,8 @@
     display: flex;
     align-items: center;
     margin-top: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
   }
 
   &__footerIcons {
