--- a/src/Components/Feed/Feed.scss
+++ b/src/Components/Feed/Feed.scss
@@ -1,4 +1,5 @@
 @import "../../style/base/colors";
+@import "../../style/utilities/breakpoints";
 
 /* Hide scrollbar for Chrome, Safari and Opera */
 .feed::-webkit-scrollbar {
@@ -12,10 +13,17 @@
 }
 
 .feed {
-  flex: 0.4;
   border-right: 1px solid $twitter-bgcolor;
   // min-width: fit-content;
   overflow-y: scroll;
+  flex: 1;
+
+  @media screen and (min-width: $screen-smamed) {
+  }
+
+  @media screen and (min-width: $screen-large) {
+    flex: 0.4;
+  }
 
   &__header {
     position: sticky;
