--- a/src/Components/Sidebar/Sidebar.scss
+++ b/src/Components/Sidebar/Sidebar.scss
@@ -1,4 +1,5 @@
 @import "../../style/base/colors";
+@import "../../style/utilities/breakpoints";
 
 /* Hide scrollbar for Chrome, Safari and Opera */
 .sidebar::-webkit-scrollbar {
@@ -13,13 +14,16 @@
 
 .sidebar {
   border-right: 1px solid $twitter-bgcolor;
-  flex: 0.3;
-  min-width: 250px;
   padding: 20px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   overflow-y: auto;
+
+  @media screen and (min-width: $screen-large) {
+    min-width: 250px;
+    flex: 0.3;
+  }
 
   &__nav {
     & > a {
@@ -49,10 +53,31 @@
       height: 50px;
       margin-top: 20px;
 
+      .MuiButton-label {
+        span {
+          content-visibility: hidden;
+
+          @media screen and (min-width: $screen-large) {
+            content-visibility: visible;
+          }
+        }
+
+        img {
+          content-visibility: visible;
+
+          @media screen and (min-width: $screen-large) {
+            content-visibility: hidden;
+          }
+        }
+      }
+
       &:hover {
         background-color: $twitter-color;
         color: $white;
       }
+    }
+
+    &__tweetButtonImg {
     }
   }
 }
