--- a/src/Components/SidebarOption/SidebarOption.scss
+++ b/src/Components/SidebarOption/SidebarOption.scss
@@ -1,4 +1,5 @@
 @import "../../style/base/colors";
+@import "../../style/utilities/breakpoints";
 
 .sidebarOption {
   display: flex;
@@ -21,7 +22,12 @@
   & > h2 {
     font-size: 20px;
     font-weight: 700;
-    margin-right: 20px;
+    content-visibility: hidden;
+
+    @media screen and (min-width: $screen-large) {
+      content-visibility: visible;
+      margin-right: 20px;
+    }
   }
 
   &--active {
