--- a/src/style/utilities/_breakpoints.scss
+++ b/src/style/utilities/_breakpoints.scss
@@ -1,8 +1,8 @@
 $breakpoints: (
-	"small":	"(min-width: 700px)",
-	"medium":	"(min-width: 1024px)",
-	"large":	"(min-width: 1280px)",
-	"extra-large":	"(min-width: 1440px)",
+  "small": "(min-width: 700px)",
+  "medium": "(min-width: 1024px)",
+  "large": "(min-width: 1280px)",
+  "extra-large": "(min-width: 1440px)",
 );
 
 // Small mobile iphone 5 (for example)
@@ -22,6 +22,8 @@ $screen-medium: 1024px;
 
 // Tablets and small desktops
 $screen-large: 1280px;
+
+$screen-smamed: 980px;
 
 // Large tablets and desktops
 $screen-extralarge: 1440px;
