Profile page: fully styled Tabs added Avatar, Teaser image, Bio

--- a/src/style/base/_colors.scss
+++ b/src/style/base/_colors.scss
@@ -5,8 +5,11 @@
 $black: #000;
 $white: #fff;
 $grey: gray;
+$teaser-grey: #ccd6dd;
 $red: #e0245e;
 
 $twitter-grey: #657786;
 $twitter-color: #50b7f5;
+$twitter-blue: rgb(29, 161, 242);
+$twitter-color2: rgba(29, 161, 242, 0.1);
 $twitter-bgcolor: #e6ecf0;
