--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,8 @@
 /* Utilities */
 @import "./style/utilities/normalize";
 @import "./style/utilities/mixins";
-
+@import "./style/base/colors";
+@import "./style/components/buttons";
 html,
 body {
   overscroll-behavior: none;
@@ -10,6 +11,7 @@ body {
 body {
   /* --twitter-color: #50b7f5;
   --twitter-bgcolor: #e6ef0; */
+  font-size: 15px;
 }
 
 h1,
