--- a/src/Components/Profile/Profile.scss
+++ b/src/Components/Profile/Profile.scss
@@ -24,4 +24,137 @@
   @media screen and (min-width: $screen-large) {
     flex: 0.4;
   }
+
+  &__teaser {
+    background-color: $teaser-grey;
+    background-position: center;
+    background-size: cover;
+    height: 200px;
+  }
+
+  &__strip {
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+    margin-bottom: 10px;
+    margin-top: -69px;
+  }
+  &__avatar {
+    &.MuiAvatar-root {
+      width: 134px;
+      height: 134px;
+      border: 4px solid $white;
+    }
+  }
+
+  &__button {
+    &.MuiButtonBase-root {
+      margin-left: auto;
+    }
+  }
+
+  &__header {
+    padding: 15px;
+
+    & > h3 {
+      margin-bottom: 10px;
+      span {
+        color: $twitter-grey;
+        display: block;
+        font-weight: 400;
+        font-size: 15px;
+      }
+    }
+
+    & > p {
+      span {
+      }
+    }
+  }
+
+  &__info {
+    color: $twitter-grey;
+
+    p {
+      margin-top: 10px;
+      display: flex;
+      align-items: center;
+
+      svg {
+        margin-right: 5px;
+        & + svg {
+          margin-left: 15px;
+        }
+      }
+    }
+
+    span {
+      color: $black;
+      font-weight: 800;
+      margin-right: 5px;
+
+      & + span {
+        margin-left: 15px;
+      }
+    }
+  }
+
+  &__body {
+    padding: 15px;
+  }
+
+  &__tabs {
+    .MuiTab-fullWidth {
+      flex-basis: auto;
+    }
+
+    .MuiTabs-flexContainer {
+      display: flex;
+    }
+
+    .MuiTabs-root {
+    }
+
+    .MuiTab-root {
+      font-size: 15px;
+      font-weight: 700;
+      text-transform: none;
+      color: $twitter-grey;
+      &.Mui-selected {
+        color: $twitter-blue;
+      }
+    }
+
+    .MuiTabs-scroller {
+    }
+
+    .MuiTab-root {
+      min-width: 1px;
+    }
+
+    .MuiTabs-indicator {
+      background-color: $twitter-blue;
+    }
+  }
+
+  &__tabContent {
+  }
+
+  &__tabContenttitle {
+    font-size: 19px;
+    font-weight: 800;
+    padding: 10px;
+    border-bottom: 1px solid $twitter-bgcolor;
+  }
+
+  &__tabContentBody {
+    padding: 10px;
+    text-align: center;
+
+    > * {
+      margin: 10px 0;
+      text-decoration: none;
+      color: inherit;
+    }
+  }
 }
