--- a/src/style/base/_colors.scss
+++ b/src/style/base/_colors.scss
@@ -13,3 +13,4 @@ $twitter-color: #50b7f5;
 $twitter-blue: rgb(29, 161, 242);
 $twitter-color2: rgba(29, 161, 242, 0.1);
 $twitter-bgcolor: #e6ecf0;
+$twitter-inputbg: #f5f8fa;
