--- a/src/Components/Widgets/Widgets.scss
+++ b/src/Components/Widgets/Widgets.scss
@@ -23,6 +23,8 @@
     border-radius: 20px;
     margin-top: 10px;
     margin-left: 20px;
+    position: sticky;
+    top: 0;
 
     &:hover {
       background-color: $white;
@@ -52,6 +54,8 @@
     padding: 20px;
     background-color: #f5f8fa;
     border-radius: 20px;
+    position: sticky;
+    top: 0;
 
     & > h2 {
       font-size: 18px;
